# dataagent-analyst

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitignore  Makefile  README.md  alembic.ini  compose.cuda.yaml  compose.yaml  package.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/tests/: test_agent_jobs.py  test_agent_run_history.py  test_agent_workflow.py  test_ai_insights.py  test_analysis_context.py  test_backtest_artifacts_api.py  test_backtest_jobs.py  test_backtest_support.py  test_column_profiler.py  test_datasets.py  test_eda.py  test_error_handling.py  test_health.py  (+12 more)
demo-app/: index.html
docs/: 00-environment-setup.md  01-phase-0-foundation.md  02-phase-1-csv-upload.md  03-phase-2-column-profiler.md  04-phase-3-eda-engine.md  05-phase-4-visualization-engine.md  07-phase-6-model-evaluation-dashboard.md  08-phase-7-prediction-api.md  09-phase-8-report-center.md  10-phase-9-local-llm-explanation.md  11-phase-10-agent-workflow.md  12-phase-11-agent-run-history.md  13-phase-12-async-agent-jobs.md  14-phase-13-hardening-portfolio.md  15-phase-14-docker-compose.md  16-refactor-roadmap.md  17-lifecycle-workbench.md  20-r4-model-explainability.md
frontend/: index.html
scripts/: backtest_full_workflow.py  backtest_scenarios.py  backtest_support.py  build_static_demo.py  capture_portfolio_media.py  check_frontend_contract.py  check_project.sh  docker_smoke_test.sh  generate_demo_dataset.py  install_frontend_vendor.sh  migrate_metadata_to_postgres.py  modularize_frontend_html.py  smoke_test.sh  ui_backtest_workflow.py
(+125 files in other folders)
